--- a/build.gradle
+++ b/build.gradle
@@ -3,36 +3,24 @@
  */
 
 plugins {
-    // Apply the Kotlin JVM plugin to add support for Kotlin.
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
-
-    // Apply the application plugin to add support for building a CLI application.
     id 'application'
 }
 
 repositories {
     jcenter()
-    mavenCentral() // using maven, could also use any Maven/Ivy/file repository here.
+    mavenCentral()
 }
 
 dependencies {
-    // Align versions of all Kotlin components
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
-
-    // Use the Kotlin JDK 8 standard library.
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-
+    implementation platform('org.jetbrains.kotlin:kotlin-bom') // Align versions of all Kotlin components
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8' // Use the Kotlin JDK 8 standard library
     implementation 'com.google.code.gson:gson:2.8.6'
-
-    // Use the Kotlin test library.
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
-
-    // Use the Kotlin JUnit integration.
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
-
     compile "khttp:khttp:1.0.0"
 
     // for unit testing
+    testImplementation 'org.jetbrains.kotlin:kotlin-test' // Use the Kotlin test library
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit' // Use the Kotlin JUnit integration
     testImplementation(
         'org.assertj:assertj-core:3.12.2',
         'org.junit.jupiter:junit-jupiter-api:5.4.2'
@@ -40,8 +28,8 @@ dependencies {
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
 
+// Define the main class for the application and JVM arguments
 application {
-    // Define the main class for the application
     mainClassName = 'FileParserKt'
     applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=f:/dev/kotlin-demo/build/resources/main/logging.properties']
 }
