--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ dependencies {
     implementation platform('org.jetbrains.kotlin:kotlin-bom') // Align versions of all Kotlin components
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8' // Use the Kotlin JDK 8 standard library
     implementation 'com.google.code.gson:gson:2.8.6'
-    compile "khttp:khttp:1.0.0"
+    implementation 'mysql:mysql-connector-java:8.0.13'
+    implementation 'org.apache.commons:commons-dbcp2:2.5.0'
+    implementation 'khttp:khttp:1.0.0'
 
     // for unit testing
     testImplementation 'org.jetbrains.kotlin:kotlin-test' // Use the Kotlin test library
@@ -30,7 +32,7 @@ dependencies {
 
 // Define the main class for the application and JVM arguments
 application {
-    mainClassName = 'FileParserKt'
+    mainClassName = 'FileLoaderKt'
     applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=f:/dev/kotlin-demo/build/resources/main/logging.properties']
 }
 
