--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,6 +1,6 @@
 handlers=java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 
-java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
+java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %6$s %n
 
 java.util.logging.ConsoleHandler.level=INFO
 java.util.logging.ConsoleHandler.encoding=UTF-8
